--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DBA",
-  "name": "Drum Boy Advance",
+  "short_name": "Electron Aligner",
+  "name": "Electron Aligner",
   "icons": [
     {
       "src": "favicon.png",
